06-pod-with-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring-boot-demo
spec:
  containers:
  - name: hero-app
    image: sparsick/spring-boot-demo:1.5.0
    ports:
    - name: container-http
      containerPort: 8080
      protocol: TCP
