07-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-boot-demo-namespace

---

apiVersion: v1
kind: Pod
metadata:
  name: spring-boot-demo
  namespace: spring-boot-demo-namespace
spec:
  containers:
  - name: hero-app
    image: sparsick/spring-boot-demo:1.5.0
    ports:
    - containerPort: 8080
