03-pod-with-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring-boot-demo
  labels: 
     app.kubernetes.io/name: hero
spec:
  containers:
  - name: hero-app
    image: sparsick/spring-boot-demo:1.5.0
    ports:
    - name: container-http
      containerPort: 8080
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo-srv
spec:
  type: ClusterIP   
  selector:
    app.kubernetes.io/name: hero
  ports:
  - name: hero-http
    protocol: TCP
    port: 80
    targetPort: 8080
