04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/"
spec:
  rules:
    - host: spring-boot-demo.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: spring-boot-demo-srv
                port:
                  number: 80
